feat/refactor and clean domain useranimals classes