@@ -23,18 +23,15 @@ public class UserAnimalMapper {
             return null;
         }
 
-        // Map de les fotos
         List<UserAnimalPhotoDto> photoDtos = userAnimal.getPhotos() != null ?
                 userAnimal.getPhotos().stream()
                         .map(this::toPhotoDto)
                         .collect(Collectors.toList()) :
                 List.of();
 
-        // ✅ CALCULAR unlocked basado en el status
         boolean unlocked = userAnimal.getStatus() != null &&
                 userAnimal.getStatus().name().equals("UNLOCK");
 
-        // Construir el DTO base
         UserAnimalDto.UserAnimalDtoBuilder builder = UserAnimalDto.builder()
                 .id(userAnimal.getId())
                 .userId(userAnimal.getUserId())
@@ -45,34 +42,29 @@ public class UserAnimalMapper {
                 .updatedAt(userAnimal.getUpdatedAt())
                 .photos(photoDtos)
                 .totalPhotos(photoDtos.size())
-                .unlocked(unlocked); // ✅ AÑADIR ESTA LÍNEA
+                .unlocked(unlocked);
 
-        // ✅ OMPLIR les dades de l'animal (ara sí que les tenim!)
         if (animal != null) {
             builder.animalCommonName(animal.getCommonName())
                     .animalScientificName(animal.getScientificName())
                     .animalCategory(animal.getCategory())
                     .animalDefaultPhotoUrl(animal.getPhotoUnlockFileName())
-                    .displayName(animal.getCommonName());  // Això evitarà "Animal 2"
+                    .displayName(animal.getCommonName());
         } else {
-            // ✅ Fallback si no hi ha animal
             builder.displayName("Animal " + userAnimal.getAnimalId());
         }
 
-        // Format de data per al frontend
         if (userAnimal.getUnlockedAt() != null) {
             builder.firstUnlockDate(userAnimal.getUnlockedAt()
                     .format(DateTimeFormatter.ofPattern("dd/MM/yyyy")));
         }
 
-        // ✅ Main photo URL
         if (!photoDtos.isEmpty()) {
-            builder.mainPhotoUrl(photoDtos.get(0).getFileName());
+            builder.mainPhotoUrl(photoDtos.getFirst().getFileName());
         } else if (animal != null && animal.getPhotoUnlockFileName() != null) {
             builder.mainPhotoUrl(animal.getPhotoUnlockFileName());
         }
 
-        // ✅ DEBUG: Log para verificar
         System.out.println("🔍 UserAnimalMapper - Animal: " +
                 (animal != null ? animal.getCommonName() : "null") +
                 ", Status: " + userAnimal.getStatus() +
@@ -81,9 +73,8 @@ public class UserAnimalMapper {
         return builder.build();
     }
 
-    // ✅ Manté el mètode original per compatibilitat
     public UserAnimalDto toDto(UserAnimal userAnimal) {
-        return toDto(userAnimal, null);  // Crida el nou mètode sense animal
+        return toDto(userAnimal, null);
     }
 
     public UserAnimalPhotoDto toPhotoDto(UserAnimalPhoto photo) {
@@ -91,7 +82,6 @@ public class UserAnimalMapper {
             return null;
         }
 
-        // Generar URLs per al frontend
         String downloadUrl = baseUrl + "/api/user-animals/photos/" + photo.getId() + "/download";
         String displayUrl = baseUrl + "/api/user-animals/photos/" + photo.getId() + "/display";
 
@@ -107,25 +97,11 @@ public class UserAnimalMapper {
                 .displayUrl(displayUrl)
                 .userAnimalId(photo.getUserAnimalId());
 
-        // Afegir informació de l'animal si està disponible
         if (photo.getUserAnimal() != null && photo.getUserAnimal().getAnimal() != null) {
             builder.animalId(photo.getUserAnimal().getAnimal().getId())
                     .animalCommonName(photo.getUserAnimal().getAnimal().getCommonName());
         }
 
         return builder.build();
-    }
-
-    // Mètodes per a llistes
-    public List<UserAnimalDto> toDtoList(List<UserAnimal> userAnimals) {
-        return userAnimals.stream()
-                .map(this::toDto)
-                .collect(Collectors.toList());
-    }
-
-    public List<UserAnimalPhotoDto> toPhotoDtoList(List<UserAnimalPhoto> photos) {
-        return photos.stream()
-                .map(this::toPhotoDto)
-                .collect(Collectors.toList());
     }
 }
